<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminInsert">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        tools:context=".DetailPost">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_Header"
            android:gravity="center"
            android:background="@color/colorWhite">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/title_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/author_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"/>

    <EditText
        android:visibility="invisible"
        android:id="@+id/imageUrl_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/img_url"/>
    <Button
        android:id="@+id/buttonUpload_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_from_device"/>
    <EditText
        android:id="@+id/description_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"/>
    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
        <ImageView
            android:layout_margin="24dp"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:id="@+id/image_placeholder_insert"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

</LinearLayout>
</LinearLayout>