<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/friend_req_profile_img"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:paddingEnd="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/friend_username"
                    android:text="Test"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/friend_email"
                    android:text="Test"

                    />
            </LinearLayout>


            <Button
                android:id="@+id/req_add_friend_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_friend"
                android:gravity="center"
                android:layout_weight="0.7"

                >

            </Button>
            <TextView
                android:id="@+id/already_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_friend"
                android:gravity="center"
                android:layout_weight="0.7"
                android:visibility="gone"
                >

            </TextView>
            <Button
                android:id="@+id/cancel_add_friend_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_add_friend"
                android:layout_weight="0.7"
                android:gravity="center"
                android:visibility="gone"
                >

            </Button>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>